@@ -1,3 +1,7 @@
+2011-09-15  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* message.el (message-read-from-minibuffer): Make abbrev expansion work.
+
 2011-09-12  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
 	* gnus.el (gnus-interactive-exit): Update defcustom spec.
